--- a/package.json
+++ b/package.json
@@ -54,5 +54,17 @@
     "prettier": "^3.2.5",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
